SERVER-5844 mongos cursors return the wrong value for startingFrom